# agent-linker

./: .gitignore  AGENTS.md  CLAUDE.md  CLI_REFERENCE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
dev-docs/: ai-development-todo.md  architecture.md
dev-docs/modules/: 01-symlink-core.md  02-project-init-manifest.md  03-framework-adapter.md  04-global-store-registry.md  05-linkable-item.md  06-cli-command-surface.md  07-code-architecture-verification.md
docs/: architecture_decisions.md  discussion_checklist.md  原始需求.md
src/: cli.rs  lib.rs  main.rs
src/commands/: mod.rs
src/core/: db.rs  error.rs  framework.rs  linkable.rs  manifest.rs  mod.rs  paths.rs  project_links.rs  registry.rs  symlink.rs  test_support.rs  util.rs
