[package]
name = "agent_linker"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[target.'cfg(windows)'.dependencies]
win-symlinks-client = { git = "https://github.com/winddxr/win-symlinks", package = "win-symlinks-client" }
windows = { version = "0.62", features = ["Win32_Security"] }

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "aglink"
path = "src/main.rs"
